--- a/css/style.css
+++ b/css/style.css
@@ -518,7 +518,7 @@
             max-width: 160px;
             max-height: 100px;
             object-fit: contain;
-            display: none;
+            display: block;
             border-radius: 4px
         }
 
